deploy/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fdk-statistics-service
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: '4'
    nginx.ingress.kubernetes.io/limit-burst-multiplier: '2'
    nginx.ingress.kubernetes.io/limit-whitelist: '10.0.0.0/8,162.244.5.0/24'
    nginx.ingress.kubernetes.io/server-snippet: |
      server_tokens off;
      location ~ ^/(ping|ready|prometheus) {
        deny all;
        return 404;
      }
spec:
  ingressClassName: nginx
  rules:
    - host: statistics.api.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: fdk-statistics-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
